<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".Activities.AuxiliarActivity2">

    <TextView
        android:text="@string/cadastrarCachorroInfo"
        android:id="@+id/tv_informationSearch"
        android:textSize="20sp"
        android:layout_marginTop="300dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_raca"
        android:hint="@string/qual_raca_dog"
        app:layout_constraintTop_toBottomOf="@+id/tv_informationSearch"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_precoMedio"
        android:inputType="numberDecimal"
        android:hint="@string/qual_o_precoMedio"
        app:layout_constraintTop_toBottomOf="@+id/et_raca"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:hint="@string/indicado_kids"
        android:id="@+id/sw_indicadoKids"
        app:layout_constraintTop_toBottomOf="@+id/et_precoMedio"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrarDog"
        android:id="@+id/btn_cadDog"
        android:onClick="cadastrarDog"
        app:layout_constraintTop_toBottomOf="@id/sw_indicadoKids"
        />

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/dog"
            android:id="@+id/iv_fotoDog"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/tv_informationSearch"
            tools:ignore="MissingConstraints"
    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_backMain"
        android:text="@string/backButton"
        android:onClick="backMain"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
