<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".MainActivity"
    >

    <TextView
        android:text="@string/insira_abaixo_sua_pesquisa"
        android:id="@+id/tv_informationSearch"
        android:textSize="20sp"
        android:layout_marginTop="300dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:id="@+id/bt_camp2"
        android:onClick="navigateToAct2"
        app:layout_constraintTop_toBottomOf="@id/tv_informationSearch"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_actionMain"
        android:text="@string/listDogs"
        android:onClick="navigateToAct1"
        app:layout_constraintTop_toBottomOf="@id/bt_camp2"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

