<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:background="@color/purple_200"
    android:paddingRight="15dp"
    tools:context=".Activities.AuxiliarActivity1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="18sp"
        android:text="@string/cachorro_Indicado_kids"
        android:id="@+id/tv_cachorrokidTrue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/nao_indicado_kids"
        android:id="@+id/tv_cachorrokidFalse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cachorrokidTrue"
        />

    <TextView
        android:id="@+id/tv_cachorrokidTrueResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:text="-"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/tv_cachorrokidTrue"
        tools:layout_editor_absoluteY="100dp" />

    <TextView
        android:id="@+id/tv_cachorrokidFalseResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="-"
        android:textSize="18sp"

        app:layout_constraintStart_toEndOf="@id/tv_cachorrokidFalse"
        tools:layout_editor_absoluteY="124dp" />

    <TextView
        android:id="@+id/tv_cachorrokidContResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="208dp"
        android:text="-"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/tv_cachorrokidCont"
        tools:layout_editor_absoluteY="146dp" />

    <TextView
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/contagem_total"
        android:id="@+id/tv_cachorrokidCont"
        app:layout_constraintTop_toBottomOf="@+id/tv_cachorrokidFalse"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sv_listaDogs"
        android:layout_marginTop="170dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_cachorrokidCont"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layout_lista"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>